fixing scrollbar issue with safari

--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,3 +1,3 @@
 .iconDropFilter {
-  filter: drop-shadow(0px 0px 0px #F3F4F6) drop-shadow(-1px 2px 1px #312E81) drop-shadow(1px -2px 1px #831843);
+  filter: drop-shadow(-1px 2px 1px #312E81) drop-shadow(1px -2px 1px #831843);
 }
