--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -5,9 +5,12 @@
   transform-origin: top left;
   overflow-y: scroll;
   overflow-x: hidden;
-
   scrollbar-width: none;
   -ms-overflow-style: none;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
 
 .horizontalWrapper {
