--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -7,7 +7,7 @@
   background: linear-gradient(90deg, rgba(209, 213, 219, 1) 23%, rgba(0, 0, 0, 0) 24%, rgba(0, 0, 0, 0) 38%, rgba(243, 244, 246, 1) 39%);
   border-radius: 0.2rem;
   transition: transform 550ms 100ms, margin 250ms, height 550ms, opacity 350ms;
-  filter: drop-shadow(0px 0px 2px #F3F4F6);
+  filter: drop-shadow(-1px 1px 1px #312E81) drop-shadow(1px -1px 1px #831843);
 }
 
 .menuIcon:nth-of-type(2) {
@@ -17,6 +17,7 @@
 
 .menuIcon:nth-of-type(odd) {
   transform: rotate(180deg);
+  filter: drop-shadow(-1px 1px 1px #831843) drop-shadow(1px -1px 1px #312E81);
 }
 
 .activated.menuIcon {
